# coinbase.alfredworkflow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: api.rs  coinbase.rs  main.rs
workflow/: info.plist
