[package]
name = "coinbase-alfred-workflow"
version = "0.1.0"
authors = ["Derek Ahn <git.derek@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
futures = "0.3.28"
powerpack = "0.4.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version =  "1.27.0", features = ["full"] }
